# rato

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.yml
.github/workflows/: agent-manager.yml  agent-merger.yml  agent-reviewer.yml  agent-scrum-master.yml  agent-worker.yml  autonomy-off.yml  autonomy-on.yml  ci.yml
apps/shell/: avatar.html  dashboard.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/src/: main.rs
apps/shell/src/assets/fonts/: OFL.txt
apps/shell/src/avatar/: Avatar.svelte  main.ts  rat3d.ts
apps/shell/src/dashboard/: Dashboard.svelte  main.ts
apps/shell/src/dashboard/tabs/: Agents.svelte  Approvals.svelte  Calendar.svelte  Memory.svelte  Metrics.svelte  Now.svelte  Pins.svelte  Pushback.svelte  Sensors.svelte  Settings.svelte  Workbench.svelte
apps/shell/src/lib/: rpc.ts  types.ts
apps/shell/src/ui/hud/: DialogueBox.svelte  HudPanel.svelte  MeterBar.svelte  StatusChip.svelte  TabBar.svelte  tokens.css
crates/rat-brain/: Cargo.toml
crates/rat-brain/src/: anthropic.rs  backend.rs  compat.rs  critic.rs  detect.rs  error.rs  governor.rs  keys.rs  lib.rs  openai.rs
crates/rat-brain/tests/: critic_tests.rs  detect_tests.rs  governor_tests.rs
crates/rat-cli/: Cargo.toml
crates/rat-cli/src/: client.rs  doctor.rs  install.rs  main.rs  shellinit.rs
crates/rat-cli/tests/: cli.rs
crates/rat-client/: Cargo.toml
crates/rat-client/src/: lib.rs
crates/rat-core/: Cargo.toml
crates/rat-core/src/: clock.rs  id.rs  lib.rs  paths.rs
crates/rat-daemon/: Cargo.toml
crates/rat-daemon/src/: capture.rs  config.rs  ingest.rs  lib.rs  main.rs  memory_searcher.rs  mode.rs  pins.rs  sensors_health.rs  server.rs  sessionizer.rs  voice_loop.rs
crates/rat-daemon/tests/: rpc.rs
crates/rat-dotfile/: Cargo.toml
crates/rat-dotfile/src/: lib.rs
crates/rat-inject/: Cargo.toml
crates/rat-inject/src/: lib.rs
crates/rat-memory/: Cargo.toml
crates/rat-memory/src/: embed.rs  jobs.rs  lib.rs  retrieve.rs
crates/rat-policy/: Cargo.toml
crates/rat-policy/src/: lib.rs
crates/rat-proto/: Cargo.toml
crates/rat-proto/src/: lib.rs
crates/rat-ring/: Cargo.toml
crates/rat-ring/src/: crypto.rs  lib.rs  ring.rs
crates/rat-sensors/: Cargo.toml
crates/rat-sensors/src/: clipboard.rs  gitwatch.rs  idle.rs  lib.rs  proc.rs
crates/rat-store/: Cargo.toml
crates/rat-store/src/: db.rs  error.rs  lib.rs  rows.rs  store.rs
crates/rat-terminal/: Cargo.toml
crates/rat-terminal/src/: lib.rs
crates/rat-vision/: Cargo.toml
crates/rat-vision/src/: autopin.rs  dhash.rs  lib.rs  ocr.rs  ocr_tesseract.rs  pipeline.rs  screen.rs  screen_portal.rs
crates/rat-voice/: Cargo.toml
crates/rat-voice/src/: approval.rs  intent.rs  lib.rs  prewake.rs  slug.rs  traits.rs
crates/rat-workbench/: Cargo.toml
crates/rat-workbench/src/: adapter.rs  error.rs  lib.rs  runner.rs  tmux.rs  worktree.rs
crates/rat-workbench/tests/: integration.rs  runner_tests.rs
crates/rat-workbench/tests/fixtures/: fakeagent.sh
docs/: ARCHITECTURE.md  RUNNING.md  TEST-CHECKLIST.md
docs/agents/: AUTONOMOUS_WORKFLOW.md  CONSTITUTION.md  README.md
docs/agents/roles/: cartographer.md  manager.md  merger.md  orchestrator.md  reviewer.md  scrum-master.md  worker.md
docs/superpowers/plans/: 2026-06-10-rato-m0-spine.md  2026-06-10-rato-m1-sensors.md  2026-06-11-avatar-hud-redesign.md  2026-06-11-m3-memory-critic.md  2026-06-11-m4-workbench.md  2026-06-11-m5-eyes.md  2026-06-11-rato-m2-shell.md  2026-06-16-m6-voice.md  2026-06-16-m7-polish.md
docs/superpowers/specs/: 2026-06-11-avatar-hud-redesign-design.md  2026-06-11-m3-memory-critic-design.md  2026-06-11-m4-workbench-design.md  2026-06-11-m5-eyes-design.md  2026-06-11-m6-voice-design.md  2026-06-11-m7-polish-design.md  2026-06-11-m8-hardening-design.md
packaging/shell/: rat-init.sh
packaging/systemd/: rato-shell.service
scripts/agent/: README.md  bootstrap-github.ps1  run-agent-role.ps1  run-provider-agent.ps1
scripts/autonomy/: README.md  dashboard-server.mjs  run-local-autonomy.ps1
scripts/autonomy/dashboard/: index.html
