[workspace]
resolver = "2"
members = [
    "crates/rat-client",
    "crates/rat-core",
    "crates/rat-policy",
    "crates/rat-proto",
    "crates/rat-store",
    "crates/rat-sensors",
    "crates/rat-daemon",
    "crates/rat-cli",
    "crates/rat-brain",
    "crates/rat-memory",
    "crates/rat-workbench",
    "crates/rat-ring",
]
# built separately (needs webkit2gtk system libs): cargo build --manifest-path apps/shell/src-tauri/Cargo.toml
exclude = ["apps/shell/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
libc = "0.2"
regex = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
sha2 = "0.10"
