[package]
name = "rat-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rat"
path = "src/main.rs"

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rat-daemon = { path = "../rat-daemon" }
rat-store = { path = "../rat-store" }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
