[package]
name = "rat-client"
version.workspace = true
edition.workspace = true

[dependencies]
rat-proto = { path = "../rat-proto" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rat-core = { path = "../rat-core" }
rat-daemon = { path = "../rat-daemon" }
rat-store = { path = "../rat-store" }
tempfile = { workspace = true }
