[package]
name = "rat-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "rat_daemon"

[[bin]]
name = "ratd"
path = "src/main.rs"

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
rat-store = { path = "../rat-store" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
