[package]
name = "rat-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "rat_daemon"

[[bin]]
name = "ratd"
path = "src/main.rs"

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
rat-sensors = { path = "../rat-sensors" }
rat-store = { path = "../rat-store" }
rat-brain = { path = "../rat-brain" }
rat-memory = { path = "../rat-memory" }
rat-workbench = { path = "../rat-workbench" }
rat-policy = { path = "../rat-policy" }
rat-ring = { path = "../rat-ring" }
rat-vision = { path = "../rat-vision" }
rat-voice = { path = "../rat-voice" }
rat-dotfile = { path = "../rat-dotfile" }
rat-terminal = { path = "../rat-terminal" }
anyhow = { workspace = true }
async-trait = "0.1"
clap = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
screencast = ["rat-vision/screencast"]
ocr = ["rat-vision/ocr"]

[dev-dependencies]
tempfile = { workspace = true }
