[package]
name = "rat-memory"
version.workspace = true
edition.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
rat-store = { path = "../rat-store" }
rat-brain = { path = "../rat-brain" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }
tempfile = { workspace = true }
rat-core = { path = "../rat-core" }
