[package]
name = "rat-sensors"
version.workspace = true
edition.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
arboard = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
