[package]
name = "rat-store"
version.workspace = true
edition.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-proto = { path = "../rat-proto" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
