[package]
name = "rato-shell"
version = "0.1.0"
edition = "2021"

# Excluded from the root workspace: needs webkit2gtk system libs.
# Build: cargo build --release --manifest-path apps/shell/src-tauri/Cargo.toml
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rat-client = { path = "../../../crates/rat-client" }
rat-core = { path = "../../../crates/rat-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
