[package]
name = "rato-shell"
version = "0.1.0"
edition = "2021"

# Excluded from the root workspace: needs webkit2gtk system libs.
# Build: cargo build --release --manifest-path apps/shell/src-tauri/Cargo.toml
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rat-client = { path = "../../../crates/rat-client" }
rat-core = { path = "../../../crates/rat-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# custom-protocol: serve embedded dist/ assets (we build with plain cargo, not the tauri CLI,
# so the feature must be on by default or the app tries to load the vite dev server)
tauri = { version = "2", features = ["custom-protocol"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
